# oop_tasks

./: .gitignore  CMakeLists.txt  Capacity.cpp  Capacity.h  README.md  Reader.cpp  Reader.h  Writer.cpp  Writer.h  oop_lab0_b.cpp
oop_task_1/: CMakeLists.txt
oop_task_1/oop_task_1/: CMakeLists.txt  main.cpp  module_1.cpp  module_1.h  module_2.cpp  module_2.h  module_3.cpp  module_3.h
